@@ -1,4 +1,5 @@
 0.6.0
+Fixed labels on translucent windows.
 Fixed version number in .pc file.
 Fixed spurious enter/exit callbacks when clicking gadget.
 Fixed set/unset keep above/below.
